fix: component overflow issues

--- a/packages/vue-component-library/src/styles/ftva/_header-sticky.scss
+++ b/packages/vue-component-library/src/styles/ftva/_header-sticky.scss
@@ -6,7 +6,6 @@
         z-index: 1000; // always on top
         top: 64px;
         height: 1px;
-        width: 100vw;
         border-bottom: 1px solid var(--ftva-medium-blue);
     }
 
