--- a/packages/vue-component-library/src/styles/ftva/_nav-primary.scss
+++ b/packages/vue-component-library/src/styles/ftva/_nav-primary.scss
@@ -28,24 +28,6 @@
         position: absolute;
         display: flex;
 
-        // add css 'wings' to fill sides of large screen with menu bg color
-        &::after,
-        &::before {
-            display: block;
-            overflow: visible;
-            position: absolute;
-            left: -500px;
-            bottom: 0px;
-            content: '';
-            height: 100%;
-            max-height: 400px;
-            width: 500px;
-            background-color: $navy-blue;
-        }
-
-        &::after {
-            left: 100%;
-        }
         .section-name {
             font-size: 20px;
         }
@@ -121,25 +103,6 @@
             transition-duration: .2s;
             transition-timing-function: ease-in-out;
 
-            // add css 'wings' to fill sides of large screen with menu bg color
-            &::after,
-            &::before {
-                display: block;
-                overflow: visible;
-                position: absolute;
-                left: -500px;
-                bottom: 0px;
-                content: '';
-                height: 100%;
-                max-height: 400px;
-                width: 500px;
-                background-color: $navy-blue;
-            }
-
-            &::after {
-                left: 100%;
-            }
-
             &.is-opened {
                 transform: scaleY(1);
             }
@@ -164,7 +127,6 @@
 
         &.is-opened-mobile {
             height: 100vh;
-            overflow-y: scroll;
             overflow-x: hidden;
             padding-bottom: 110px; //offset for space behind floating donate button
         }
